--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:circle="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -29,15 +27,12 @@
         android:layout_below="@+id/facebookLoginButton"
         android:layout_alignParentStart="true" />
 
-    <at.markushi.ui.CircleButton
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
         android:id="@+id/next"
-        android:layout_width="match_parent"
-        android:layout_height="64dip"
-        android:layout_marginBottom="8dip"
-        android:src="@drawable/check_icon"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        circle:cb_color="#99CC00" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
